--- a/example/storybook/src/components/Disclosure/Actionsheet/index.stories.mdx
+++ b/example/storybook/src/components/Disclosure/Actionsheet/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Actionsheet Component | Installation, Usage, and API
 
-description: The ActionSheet is a UI element that displays a list of options or actions. It's commonly used in mobile apps to provide a contextual menu of actions. The component appears as a modal dialog that slides up from the bottom of the screen and can be customized with different styles and triggers.
+description: The Actionsheet component presents a set of options to the user, overlaid on top of the app's content, allowing them to take quick actions without leaving the current page or view.
 
 pageTitle: Actionsheet
 
-pageDescription: An Actionsheet is a dialog that displays a set of options. It appears on top of the app's content.
+pageDescription: The Actionsheet component presents a set of options to the user, overlaid on top of the app's content, allowing them to take quick actions without leaving the current page or view.
 
 showHeader: true
 ---
