--- a/example/storybook/src/components/Feedback/Alert/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Alert/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Slider Alert | Installation, Usage, and API
 
-description: Alerts convey a state that can influence a system, feature, or page.
+description: Alerts are used to communicate the status of a system, feature, or page. They indicate a specific state that may require attention from the user.
 
 pageTitle: Alert
 
-pageDescription: Alerts convey a state that can influence a system, feature, or page.
+pageDescription: Alerts are used to communicate the status of a system, feature, or page. They indicate a specific state that may require attention from the user.
 
 showHeader: true
 ---
