--- a/example/storybook/src/components/Feedback/Progress/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Progress/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Progress Component | Installation, Usage, and API
 
-description: Progress helps show the progress status for a time-consuming task that consists of several steps.
+description: The Progress component is designed to display the progress of a task that involves multiple steps and takes some time to complete. It helps users stay informed about the current status of a lengthy process.
 
 pageTitle: Progress
 
-pageDescription: Progress helps show the progress status for a time-consuming task that consists of several steps.
+pageDescription: The Progress component is designed to display the progress of a task that involves multiple steps and takes some time to complete. It helps users stay informed about the current status of a lengthy process.
 
 showHeader: true
 ---
