--- a/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Spinner Component | Installation, Usage, and API
 
-description: Spinners gives visual cues to actions that are processing or awaiting a course change or results.
+description: Spinners are designed to give visual cues to users that an action is being processed or that a change or result is expected. They are useful for improving the user experience by reducing frustration and uncertainty.
 
 pageTitle: Spinner
 
-pageDescription: Spinners gives visual cues to actions that are processing or awaiting a course change or results.
+pageDescription: Spinners are designed to give visual cues to users that an action is being processed or that a change or result is expected. They are useful for improving the user experience by reducing frustration and uncertainty.
 
 showHeader: true
 ---
