--- a/example/storybook/src/components/Feedback/Toast/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Toast/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Toast Component | Installation, Usage, and API
 
-description: Toast displays alerts on top of an overlay.
+description: Toast is a component that can display alerts, notifications, or messages on top of an overlay layer. It is commonly used to inform users of important information or actions.
 
 pageTitle: Toast
 
-pageDescription: Toast displays alerts on top of an overlay.
+pageDescription: Toast is a component that can display alerts, notifications, or messages on top of an overlay layer. It is commonly used to inform users of important information or actions.
 
 showHeader: true
 ---
