--- a/example/storybook/src/components/Forms/Button/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Button/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Button Component | Installation, Usage, and API
 
-description: The Button component triggers an event or an action.
+description: A button component is a graphical user interface element that enables users to act by clicking or tapping. It can be customized in size, shape, color, and behavior to fit the design of the application or website.
 
 pageTitle: Button
 
-pageDescription: The Button component triggers an event or an action.
+pageDescription: A button component is a graphical user interface element that enables users to act by clicking or tapping. It can be customized in size, shape, color, and behavior to fit the design of the application or website.
 
 showHeader: true
 ---
