--- a/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Checkbox Component | Installation, Usage, and API
 
-description: The Checkbox component allows a user to select multiple values from various options in a form.
+description: Whether you're building a simple form or a complex data collection system, the Checkbox component offers a user-friendly way for users to select multiple options from a list.
 
 pageTitle: Checkbox
 
-pageDescription: The Checkbox component allows a user to select multiple values from various options in a form.
+pageDescription: Whether you're building a simple form or a complex data collection system, the Checkbox component offers a user-friendly way for users to select multiple options from a list.
 
 showHeader: true
 ---
