--- a/example/storybook/src/components/Forms/FormControl/index.stories.mdx
+++ b/example/storybook/src/components/Forms/FormControl/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui FormControl Component | Installation, Usage, and API
 
-description: FormControl is used to form elements by providing context such as isInvalid, isDisabled, and isRequired.
+description: By using FormControl, developers can provide important context to form elements. This context can include whether the element is invalid, disabled, or required.
 
 pageTitle: FormControl
 
-pageDescription: FormControl is used to form elements by providing context such as isInvalid, isDisabled, and isRequired.
+pageDescription: By using FormControl, developers can provide important context to form elements. This context can include whether the element is invalid, disabled, or required.
 
 showHeader: true
 ---
