--- a/example/storybook/src/components/Forms/Link/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Link/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Link Component | Installation, Usage, and API
 
-description: Links are accessible elements used primarily for navigation. This component is styled to resemble a hyperlink.
+description: With links, users can navigate seamlessly throughout a website. This component has a hyperlinked appearance for a user-friendly experience.
 
 pageTitle: Link
 
-pageDescription: Links are accessible elements used primarily for navigation. This component is styled to resemble a hyperlink.
+pageDescription: With links, users can navigate seamlessly throughout a website. This component has a hyperlinked appearance for a user-friendly experience.
 
 showHeader: true
 ---
