--- a/example/storybook/src/components/Forms/Radio/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Radio/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Radio Component | Installation, Usage, and API
 
-description: A Radio component is used to provide a way for users to select one option from a set of predefined choices.
+description: The Radio component presents users with predefined choices and enables them to select only one option. It is commonly used for providing a single-choice selection in forms or surveys.
 
 pageTitle: Radio
 
-pageDescription: A Radio component is used to provide a way for users to select one option from a set of predefined choices.
+pageDescription: The Radio component presents users with predefined choices and enables them to select only one option. It is commonly used for providing a single-choice selection in forms or surveys.
 
 showHeader: true
 ---
