--- a/example/storybook/src/components/Forms/Select/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Select/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Select Component | Installation, Usage, and API
 
-description: Select creates a dropdown list of items with the selected item in closed view.
+description: Select offers a dynamic and user-friendly way to present a list of options in a closed view, with the ability to expand and select items from a dropdown list.
 
 pageTitle: Select
 
-pageDescription: Select creates a dropdown list of items with the selected item in closed view.
+pageDescription: Select offers a dynamic and user-friendly way to present a list of options in a closed view, with the ability to expand and select items from a dropdown list.
 
 showHeader: true
 ---
