--- a/example/storybook/src/components/Layout/Center/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Center/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Center Component | Installation, Usage, and API
 
-description: Center aligns its contents to the center within itself. It is a layout component.
+description: When you need to center-align content, the Center component comes in handy. It is a layout component that can be used with other components to create complex layouts and positioning.
 
 pageTitle: Center
 
-pageDescription: Center aligns its contents to the center within itself. It is a layout component.
+pageDescription: When you need to center-align content, the Center component comes in handy. It is a layout component that can be used with other components to create complex layouts and positioning.
 
 showHeader: true
 ---
