--- a/example/storybook/src/components/Layout/HStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/HStack/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui HStack Component | Installation, Usage, and API
 
-description: HStack aligns items horizontally. Row is also an alias for HStack.
+description: HStack arranges its child elements horizontally, making it a suitable layout component for creating a row of items. It is worth noting that Row is just an alternative name for HStack.
 
 pageTitle: HStack
 
-pageDescription: HStack aligns items horizontally. Row is also an alias for HStack.
+pageDescription: HStack arranges its child elements horizontally, making it a suitable layout component for creating a row of items. It is worth noting that Row is just an alternative name for HStack.
 
 showHeader: true
 ---
