--- a/example/storybook/src/components/MediaAndIcons/Image/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Image/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Image Component | Installation, Usage, and API
 
-description: The Image component allows one to display images.
+description: With the Image component, you can enhance the look and feel of your app or website by incorporating compelling imagery.
 
 pageTitle: Image
 
-pageDescription: The Image component allows one to display images.
+pageDescription: With the Image component, you can enhance the look and feel of your app or website by incorporating compelling imagery.
 
 showHeader: true
 ---
