--- a/example/storybook/src/components/Others/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Others/Fab/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Fab Component | Installation, Usage, and API
 
-description: A floating action button (FAB) is a circular icon button that hovers over content to execute a primary action in the application.
+description: The Floating Action Button (FAB) is a dynamic button that stays visible and provides access to a primary action throughout the user's journey in the application. It is a powerful UI element that adds a touch of elegance and convenience to the user experience.
 
 pageTitle: Fab
 
-pageDescription: A floating action button (FAB) is a circular icon button that hovers over content to execute a primary action in the application.
+pageDescription: The Floating Action Button (FAB) is a dynamic button that stays visible and provides access to a primary action throughout the user's journey in the application. It is a powerful UI element that adds a touch of elegance and convenience to the user experience.
 
 showHeader: true
 ---
