--- a/example/storybook/src/components/Overlay/AlertDialog/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/AlertDialog/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui AlertDialog Component | Installation, Usage, and API
 
-description: AlertDialog is used when a user needs to be interrupted with a mandatory confirmation or call-to-action.
+description: AlertDialog effectively interrupts a user's flow and prompts them to take a specific action. It's commonly used for mandatory confirmations or call-to-actions.
 
 pageTitle: AlertDialog
 
-pageDescription: AlertDialog is used when a user needs to be interrupted with a mandatory confirmation or call-to-action.
+pageDescription: AlertDialog effectively interrupts a user's flow and prompts them to take a specific action. It's commonly used for mandatory confirmations or call-to-actions.
 
 showHeader: true
 ---
