--- a/example/storybook/src/components/Overlay/Menu/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Menu/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Menu Component | Installation, Usage, and API
 
-description: Menu generates an accessible dropdown and can be used to display a list of actionable items.
+description: The Menu component creates a user-friendly dropdown interface that can be utilized to present a range of options or actions. This feature ensures accessibility and ease of use for the user.
 
 pageTitle: Menu
 
-pageDescription: Menu generates an accessible dropdown and can be used to display a list of actionable items.
+pageDescription: The Menu component creates a user-friendly dropdown interface that can be utilized to present a range of options or actions. This feature ensures accessibility and ease of use for the user.
 
 showHeader: true
 ---
