--- a/example/storybook/src/components/Overlay/Modal/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Modal/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Modal Component | Installation, Usage, and API
 
-description: A modal is a dialog that focuses the user's attention exclusively on an information via a window that is overlaid on primary content.
+description: A Modal is a window on top of the primary content to draw the user's attention to important information or actions. It provides a focused and interruptive way to interact with the application.
 
 pageTitle: Modal
 
-pageDescription: A modal is a dialog that focuses the user's attention exclusively on an information via a window that is overlaid on primary content.
+pageDescription: A Modal is a window on top of the primary content to draw the user's attention to important information or actions. It provides a focused and interruptive way to interact with the application.
 
 showHeader: true
 ---
