--- a/example/storybook/src/components/Overlay/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Popover/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Popover Component | Installation, Usage, and API
 
-description: Popover is a non-modal dialog that floats around a trigger.
+description: Popovers often provide contextual information or quick access to related actions without requiring the user to navigate to a different page or view.
 
 pageTitle: Popover
 
-pageDescription: Popover is a non-modal dialog that floats around a trigger.
+pageDescription: Popovers often provide contextual information or quick access to related actions without requiring the user to navigate to a different page or view.
 
 showHeader: true
 ---
