--- a/example/storybook/src/components/Typography/Text/index.stories.mdx
+++ b/example/storybook/src/components/Typography/Text/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Text Component | Installation, Usage, and API
 
-description: Text allows the rendering of text and paragraphs within an interface.
+description: Looking to add text to your gluestack-ui project? Check out our text component, which supports paragraphs and other formatting options.
 
 pageTitle: Text
 
-pageDescription: Text allows the rendering of text and paragraphs within an interface.
+pageDescription: Looking to add text to your gluestack-ui project? Check out our text component, which supports paragraphs and other formatting options.
 
 showHeader: true
 ---
