--- a/example/storybook/src/components/Forms/Slider/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Slider/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Slider Component | Installation, Usage, and API
 
-description: The Slider allows users to select options from a given range of values.
+description: The Slider component enables an intuitive selection of values within a designated range. Users can easily adjust their selection by sliding a visual indicator along the track.
 
 pageTitle: Slider
 
-pageDescription: The Slider allows users to select options from a given range of values.
+pageDescription: The Slider component enables an intuitive selection of values within a designated range. Users can easily adjust their selection by sliding a visual indicator along the track.
 
 showHeader: true
 ---
