--- a/example/storybook/src/components/Forms/Switch/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Switch/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Switch Component | Installation, Usage, and API
 
-description: The Switch provides an alternative to the Checkbox component. It also allows a user to switch between enabled or disabled states.
+description: The Switch component offers a stylish alternative to the Checkbox, allowing users to enable or disable an option with a sleek sliding motion. This component is perfect for adding a touch of elegance and interactivity to your user interface.
 
 pageTitle: Switch
 
-pageDescription: The Switch provides an alternative to the Checkbox component. It also allows a user to switch between enabled or disabled states.
+pageDescription: The Switch component offers a stylish alternative to the Checkbox, allowing users to enable or disable an option with a sleek sliding motion. This component is perfect for adding a touch of elegance and interactivity to your user interface.
 
 showHeader: true
 ---
