--- a/example/storybook/src/components/Forms/Tabs/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Tabs/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Tabs Component | Installation, Usage, and API
 
-description: Tabs make it easy to explore and switch between different views.
+description: Tabs are a user-friendly way to navigate between different sections or pages of a website or application, providing a clear and organized layout for easy access. They also allow for quick and efficient switching between views.
 
 pageTitle: Tabs
 
-pageDescription: Tabs make it easy to explore and switch between different views.
+pageDescription: Tabs are a user-friendly way to navigate between different sections or pages of a website or application, providing a clear and organized layout for easy access. They also allow for quick and efficient switching between views.
 
 showHeader: true
 ---
