--- a/example/storybook/src/components/Layout/Box/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Box/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Box Component | Installation, Usage, and API
 
-description: This is a generic component for low level layout needs. It is similar to a div in HTML.
+description: If you're looking for a flexible component to help with low-level layout needs, the Box component might be just what you need. With its customizable styles and props, it can be used to create a wide range of UI elements, from simple containers to complex layout structures.
 
 pageTitle: Box
 
-pageDescription: This is a generic component for low level layout needs. It is similar to a div in HTML.
+pageDescription: If you're looking for a flexible component to help with low-level layout needs, the Box component might be just what you need. With its customizable styles and props, it can be used to create a wide range of UI elements, from simple containers to complex layout structures.
 
 showHeader: true
 ---
