--- a/example/storybook/src/components/Layout/VStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/VStack/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui VStack Component | Installation, Usage, and API
 
-description: VStack aligns items vertically. Column is also an alias for VStack.
+description: VStack organizes items vertically in a layout. Alternatively, you can use Column as an alias for VStack to achieve the same layout.
 
 pageTitle: VStack
 
-pageDescription: VStack aligns items vertically. Column is also an alias for VStack.
+pageDescription: VStack organizes items vertically in a layout. Alternatively, you can use Column as an alias for VStack to achieve the same layout.
 
 showHeader: true
 ---
