--- a/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
 title: gluestack-ui Icon Component | Installation, Usage, and API
-description: An icon component is a reusable visual element used in software development to represent an object, action, or idea in a user interface.
+description: Icons are often used to enhance the usability and accessibility of digital products by providing users with clear and intuitive visual cues. It serves as an intuitive and easily recognizable way to communicate with users.
 pageTitle: Icon
-pageDescription: An icon component is a reusable visual element used in software development to represent an object, action, or idea in a user interface.
+pageDescription: Icons are often used to enhance the usability and accessibility of digital products by providing users with clear and intuitive visual cues. It serves as an intuitive and easily recognizable way to communicate with users.
 showHeader: true
 ---
 
