--- a/example/storybook/src/components/Overlay/Tooltip/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Tooltip/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Tooltip Component | Installation, Usage, and API
 
-description: A tooltip component in React is a customizable UI element that provides additional info when users interact with it.
+description: Whether you need to provide helpful hints to new users or display extra details for power users, the Tooltip component is a simple and effective way.
 
 pageTitle: Tooltip
 
-pageDescription: Tooltip component is a customizable UI element that displays additional info when users interact with it, enhancing UX.
+pageDescription: Whether you need to provide helpful hints to new users or display extra details for power users, the Tooltip component is a simple and effective way.
 
 showHeader: true
 ---
