--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: Installation | gluestack-ui
 
-description: A Quick Installation guide for gluestack-ui.
+description: To get started with gluestack-ui, check out this quick installation guide. It provides simple steps to help you install and use the library in your projects..
 
 pageTitle: Installation
 
-pageDescription: A Quick Installation guide for gluestack-ui.
+pageDescription: To get started with gluestack-ui, check out this quick installation guide. It provides simple steps to help you install and use the library in your projects.
 
 showHeader: true
 ---
