--- a/example/storybook/src/components/Forms/Input/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Input/index.stories.mdx
@@ -1,11 +1,11 @@
 ---
 title: gluestack-ui Input Component | Installation, Usage, and API
 
-description: The Input component allows users to input data in a text field, making it an essential UI element for forms and data entry. It can be customized for various use cases and provides a seamless user experience.
+description: The Input component is your go-to tool for gathering user input in a sleek and user-friendly text field. Whether you're designing a simple login form or a complex search feature, this component has got you covered.
 
 pageTitle: Input
 
-pageDescription: The Input component allows users to input data in a text field, making it an essential UI element for forms and data entry. It can be customized for various use cases and provides a seamless user experience.
+pageDescription: The Input component is your go-to tool for gathering user input in a sleek and user-friendly text field. Whether you're designing a simple login form or a complex search feature, this component has got you covered.
 
 showHeader: true
 ---
@@ -15,7 +15,7 @@ import { Meta } from '@storybook/addon-docs';
 <Meta title="components/Forms/Input" />
 
 import { Input, Center } from './Input';
-import { VStack, Icon, ChevronLeftIcon, ChevronRightIcon } from './InputIcon';
+import { VStack, Icon, SearchIcon } from './InputIcon';
 import { transformedCode } from '../../../utils';
 import {
   AppProvider,
@@ -408,12 +408,12 @@ The Input with Icons is a variation of the Input component that displays icons n
     showArgsController={false}
     metaData={{
       code: `<Input>
-          <Input.Input
-            placeholder="Enter Text here"
-          />
-          <Input.Icon pr="$2">
-          <Icon as={ChevronRightIcon} />
+          <Input.Icon pl="$3">
+          <Icon as={SearchIcon} />
           </Input.Icon>
+          <Input.Input
+            placeholder="Search"
+          /> 
         </Input>`,
   transformCode: (code) => {
   return transformedCode(code);
@@ -422,8 +422,7 @@ scope: {
   Wrapper,
   Input,
   VStack,
-  ChevronLeftIcon,
-  ChevronRightIcon,
+  SearchIcon,
   Icon,
 },
 argsType: {},
