--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -14,187 +14,66 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="Getting Started/Installation" />
 
-## Installation
+import {
+  AppProvider,
+  Box,
+  HStack,
+  Text,
+  Hoverable,
+} from '@gluestack/design-system';
 
-To get started with gluestack-ui, you can install it using `npx` to do initial setup and add any desired component package.
+# Installation
 
-### Initialiser (Step 1)
+`gluestack-ui` is supported in [Expo](https://expo.dev/) and [Next.js](https://nextjs.org/) initiated apps. Web support is made possible by `react-native-web`.
 
-To do the initial setup run:
+Refer the guides shown below to setup `gluestack-ui` in your Expo or Next.js app.
 
-```bash
-npx gluestack-ui
-
-```
-
-This will:
-
-- Check if gluestack-ui is installed in the project, if not it will create a `gluestack.config.ts` file which will have the default theme.
-- It will create `GluestackUIProvider` (Wrapper component)
-- Installs the required dependencies
-  - @dank-style/react
-  - @gluestack-ui/provider
-
-<br />
-
-### Component Adder (Step 2)
-
-We can add a new component using npx `npx gluestack-ui add <package-name>`. For example, to add the button component package, you can run the following command:
-
-```bash
-npx gluestack-ui add button
-
-```
-
-This will install the `@gluestack-ui/button` package and add it to your project's dependencies. This will add the necessary code to your project, including importing the `createButton` function and creating a `Button` component using it.
-
-After installing the component, you can use it in your app by importing it and rendering it in your JSX. For example:
-
-```jsx
-import { Button } from './components/button';
-function App() {
-  return (
-    <>
-      <Button onPress={() => alert('Clicked!')}>
-        <Button.Text>Click me!</Button.Text>
-      </Button>
-    </>
-  );
-}
-```
-
-For components to work properly we need to wrap our components with `<GluestackUIProvider/>` and pass the theme from `gluestack-ui.config.ts` file.
-
-#### Next.js Projects
-
-For Next.js Projects update \_app.tsx with the below code:
-
-```jsx
-import { GluestackUIProvider } from '@/components';
-import { config } from '@/gluestack-ui.config';
-import '@/styles/globals.css';
-import type { AppProps } from 'next/app';
-
-export default function App({ Component, pageProps }: AppProps) {
-  return (
-    <GluestackUIProvider config={config.theme}>
-      <Component {...pageProps} />
-    </GluestackUIProvider>
-  );
-}
-```
-
-#### Expo Projects
-
-For Expo Projects update App.tsx with the below code:
-
-```jsx
-import { StatusBar } from 'expo-status-bar';
-import { StyleSheet, Text, View } from 'react-native';
-import { GluestackUIProvider } from './components';
-import { config } from './gluestack-ui.config';
-
-export default function App() {
-  return (
-    <GluestackUIProvider config={config.theme}>
-      <Button onPress={() => alert('Clicked!')}>
-        <Button.Text>Click me!</Button.Text>
-      </Button>
-    </GluestackUIProvider>
-  );
-}
-```
+<AppProvider>
+  <HStack
+    space="md"
+    flex={1}
+    mb="$4"
+    sx={{
+      '@lg': {
+        flexDirection: 'row',
+      },
+      'flexDirection': 'column',
+    }}
+  >
+    <Hoverable
+      heading={'Expo CLI'}
+      subHeading={'Guide to install with expo-cli'}
+      href="/docs/getting-started/install-expo"
+    />
+    <Hoverable
+      heading={'Next.JS'}
+      subHeading={'Guide to install with create-next-app'}
+      href="/docs/getting-started/install-nextjs"
+    />
+  </HStack>
+</AppProvider>
 
 ### Commands provided by gluestack-ui
 
-#### Init gluestack-ui
+Below is the list of commands provided by `gluestack-ui`.
 
 ```bash
- npx gluestack-ui init
+
+# init gluestack-ui
+npx gluestack-ui init
+
+# init and add components
+npx gluestack-ui
+
+# add component
+npx gluestack-ui add <component-name>
+
+# update component
+npx gluestack-ui update <component-name>
+
+# remove component
+npx gluestack-ui remove <component-name>
+
+# help
+npx gluestack-ui help
 ```
-
-#### Init and add components
-
-```bash
-  npx gluestack-ui
-```
-
-#### Add component
-
-```bash
- npx gluestack-ui add <component-name>
-```
-
-#### Update component
-
-```bash
- npx gluestack-ui update <component-name>
-```
-
-#### Remove component
-
-```bash
-  npx gluestack-ui remove <component-name>
-```
-
-#### Help
-
-```bash
-  npx gluestack-ui help
-```
-
-This will render a button component that can be clicked and will display an alert when clicked.
-
-## For Next.js Projects
-
-It's also recommended to set up your server-side rendering (SSR) correctly. To do this, you will need to use the flush() function exported by the library and call it in your \_document.js file. So, for Next.js projects we require `@gluestack/ui-next-adapter` as a dependency and update \_document.js with the below code:
-
-```jsx
-import * as React from 'react';
-import { Html, Head, Main, NextScript } from 'next/document';
-import { AppRegistry } from 'react-native-web';
-import { flush } from '@dank-style/react';
-
-function Document() {
-  return (
-    <Html lang="en">
-      <Head />
-      <body>
-        <Main />
-        <NextScript />
-      </body>
-    </Html>
-  );
-}
-
-Document.getInitialProps = async ({ renderPage }: any) => {
-  AppRegistry.registerComponent('Main', () => Main);
-  const { getStyleElement } = AppRegistry.getApplication('Main');
-  const page = await renderPage();
-  const styles = [getStyleElement(), ...flush()];
-  return { ...page, styles: React.Children.toArray(styles) };
-};
-
-export default Document;
-```
-
-Make the following changes in `next.config.js`
-
-```jsx
-/** @type {import('next').NextConfig} */
-// eslint-disable-next-line @typescript-eslint/no-var-requires
-const { withGluestackUI } = require('@gluestack/ui-next-adapter');
-
-const nextConfig = {
-  reactStrictMode: true,
-};
-
-module.exports = withGluestackUI(nextConfig);
-```
-
-### Summary
-
-In this guide, we've walked you through the process of installing gluestack-ui and adding a Button component to your project using the npx command. With gluestack-ui, you can benefit from a library of accessible and composable UI components that work seamlessly on mobile and web platforms.
-
-The library follows WAI-ARIA authoring practices guidelines, making it accessible to a wide range of users.
-It provides both controlled and uncontrolled options for maximum flexibility. The focus is fully managed and customizable, and the dismissing and layering behaviour can be highly customized as well. With gluestack-ui, you can create high-quality UI components with ease.
