fix: sidebar items

--- a/example/storybook/src/getting-started/install-nextjs/index.stories.mdx
+++ b/example/storybook/src/getting-started/install-nextjs/index.stories.mdx
@@ -10,7 +10,7 @@ pageDescription: To get started with gluestack-ui, check out this quick installa
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="Getting Started/InstallNextJS" />
+<Meta title="Getting Started/InstallInNextjs" />
 
 import { AppProvider, Link, Box, HStack, Text } from '@gluestack/design-system';
 
