--- a/example/storybook/src/getting-started/install-expo/index.stories.mdx
+++ b/example/storybook/src/getting-started/install-expo/index.stories.mdx
@@ -12,7 +12,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 import { AppProvider, Link, Box, HStack, Text } from '@gluestack/design-system';
 
-<Meta title="Getting Started/InstallExpo" />
+<Meta title="Getting Started/InstallInExpo" />
 
 # Install in Expo project
 
