--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -22,7 +22,7 @@ import {
 
 # Installation
 
-`gluestack-ui` is supported in [Expo](https://expo.dev/) and [Next.js](https://nextjs.org/) initiated apps. Web support is made possible by `react-native-web`.
+`gluestack-ui` is supported in [Expo](https://expo.dev/) and [Next.js](https://nextjs.org/) initiated apps. Web support is made possible by [react-native-web](https://necolas.github.io/react-native-web/).
 
 Refer the guides shown below to setup `gluestack-ui` in your Expo or Next.js app.
 
