feat: add gluestack-ui CLI docs

--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -44,34 +44,9 @@ Refer the guides shown below to setup `gluestack-ui` in your Expo or Next.js app
       href="/docs/getting-started/install-expo"
     />
     <Hoverable
-      heading={'Next.JS'}
+      heading={'Next.js'}
       subHeading={'Guide to install with create-next-app'}
       href="/docs/getting-started/install-nextjs"
     />
   </HStack>
 </AppProvider>
-
-### Commands provided by gluestack-ui
-
-Below is the list of commands provided by `gluestack-ui`.
-
-```bash
-
-# init gluestack-ui
-npx gluestack-ui init
-
-# init and add components
-npx gluestack-ui
-
-# add component
-npx gluestack-ui add <component-name>
-
-# update component
-npx gluestack-ui update <component-name>
-
-# remove component
-npx gluestack-ui remove <component-name>
-
-# help
-npx gluestack-ui help
-```
